--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,9 @@
 .App {
   text-align: center;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -14,14 +12,12 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  margin-bottom: 10vh;
+  margin-top: 10vh;
   font-size: calc(10px + 2vmin);
   color: white;
+  text-shadow:3px 3px black;
+
 }
 
 .App-link {
